--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Schedule your social media posts in one place" />
     <meta name="author" content="Lovable" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="./images/social-media.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta property="og:image" content="/og-image.png" />
   </head>
